fix yosemite text with img alignment

--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ time, mark, audio, video {
 	padding: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+	/* vertical-align: baseline; */
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -115,12 +115,21 @@ header nav a:nth-child(3){
     width:10%;
 }
 
+.header-img-container {
+    vertical-align: middle;
+}
+
 header section img{
     width:325px;
     border-radius:50%;
     margin:5% 5% 5% 8%;
     display:inline-block;
-
+    vertical-align: bottom;
+}
+.text-container {
+    width: 40%;
+    vertical-align: middle;
+    padding-bottom: 10%;
 }
 
 header section h1{
@@ -138,6 +147,11 @@ header section div{
     
 }
 
+.text-container .{
+    width: 40%;
+    vertical-align: middle;
+    padding-bottom: 10%;
+}
 .first-section {
     background-color: #ddb9a3;
     margin:2%;
